--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,9 +11,9 @@ jobs:
     strategy:
       matrix:
         python_ver:
-          - 3.8
+          - latest
+          - 3.10
           - 3.9
-          - 3.8.2
 
     runs-on: ubuntu-latest
 
