--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ git-hub     = "py_dev.git.remote_hub.__main__:main"
 git-ls-b    = "py_dev.git.ls_blame.__main__:main"
 git-ls-c    = "py_dev.git.ls_commits.__main__:main"
 git-ls-d    = "py_dev.git.ls_dead.__main__:main"
+git-ls-r    = "py_dev.git.ls_reflog.__main__:main"
 git-pr      = "py_dev.git.pull_request.__main__:main"
 git-recur   = "py_dev.git.recur_submodules.__main__:main"
 git-show-c  = "py_dev.git.show_commit.__main__:main"
