--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,16 @@
 [project]
+name            = "py_dev"
+requires-python = ">=3.8.0"
+version         = "0.1.73"
+
 dependencies = [
   "std2@https://github.com/ms-jpq/std2/archive/963cf22346620926c0bd64f628ff4d8141123db5.tar.gz",
   "Pygments",
   "Jinja2",
 ]
-name = "py_dev"
-requires-python = ">=3.8.0"
-version = "0.1.73"
+[project.optional-dependencies]
+dev = ["mypy"]
+
 
 [project.scripts]
 ccat        = "py_dev.ccat.__main__:main"
