--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,29 +26,28 @@ jobs:
         with:
           python-version: ${{ matrix.python_ver }}
 
-      - name: Install Toml
-        run: pip install -- toml
-
       - name: Install Pip Packages
         shell: python
         run: |-
           from itertools import chain
           from os import execl
           from sys import executable
-          from toml import load
 
-          toml = load("pyproject.toml")
+          from tomllib import load
+
+          with open("pyproject.toml", "rb") as fd:
+              toml = load(fd)
           project = toml["project"]
           execl(
-            executable,
-            executable,
-            "-m",
-            "pip",
-            "install",
-            "--upgrade",
-            "--",
-            *project["dependencies"],
-            *chain.from_iterable(project["optional-dependencies"].values()),
+              executable,
+              executable,
+              "-m",
+              "pip",
+              "install",
+              "--upgrade",
+              "--",
+              *project["dependencies"],
+              *chain.from_iterable(project["optional-dependencies"].values()),
           )
 
       - name: Lint
