--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,12 +19,16 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Setup Python
         uses: actions/setup-python@v3
         with:
           python-version: ${{ matrix.python_ver }}
+
+      - name: Toml
+        run: |-
+          pip install -- tomli
 
       - name: Install Pip Packages
         shell: python
@@ -33,7 +37,7 @@ jobs:
           from os import execl
           from sys import executable
 
-          from tomllib import load
+          from tomli import load
 
           with open("pyproject.toml", "rb") as fd:
               toml = load(fd)
