--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name            = "py_dev"
 requires-python = ">=3.8.0"
-version         = "0.1.74"
+version         = "0.1.75"
 
 dependencies = [
   "std2@https://github.com/ms-jpq/std2/archive/963cf22346620926c0bd64f628ff4d8141123db5.tar.gz",
@@ -18,7 +18,7 @@ git-diff-c   = "py_dev.git.diff_commits.__main__:main"
 git-diff-f   = "py_dev.git.diff_file.__main__:main"
 git-diff-s   = "py_dev.git.diff_strings.__main__:main"
 git-hub      = "py_dev.git.remote_hub.__main__:main"
-git-ice-pick = "py_dev.ice_pick.__main__:main"
+git-ice-pick = "py_dev.git.ice_pick.__main__:main"
 git-ls-b     = "py_dev.git.ls_blame.__main__:main"
 git-ls-c     = "py_dev.git.ls_commits.__main__:main"
 git-ls-d     = "py_dev.git.ls_dead.__main__:main"
