--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name            = "py_dev"
 requires-python = ">=3.8.0"
-version         = "0.1.77"
+version         = "0.1.78"
 
 dependencies = [
   "std2@https://github.com/ms-jpq/std2/archive/963cf22346620926c0bd64f628ff4d8141123db5.tar.gz",
@@ -16,7 +16,6 @@ dev = ["mypy"]
 ccat         = "py_dev.ccat.__main__:main"
 git-diff-c   = "py_dev.git.diff_commits.__main__:main"
 git-diff-f   = "py_dev.git.diff_file.__main__:main"
-git-dig-c    = "py_dev.git.dig_commit_msgs.__main__:main"
 git-hub      = "py_dev.git.remote_hub.__main__:main"
 git-ice-pick = "py_dev.git.ice_pick.__main__:main"
 git-ls-b     = "py_dev.git.ls_blame.__main__:main"
@@ -25,6 +24,8 @@ git-ls-d     = "py_dev.git.ls_dead.__main__:main"
 git-ls-r     = "py_dev.git.ls_reflog.__main__:main"
 git-pr       = "py_dev.git.pull_request.__main__:main"
 git-recur    = "py_dev.git.recur_submodules.__main__:main"
+git-rg-c     = "py_dev.git.rg_commits.__main__:main"
+git-rg-s     = "py_dev.git.rg_strings.__main__:main"
 git-show-c   = "py_dev.git.show_commit.__main__:main"
 git-ssh      = "py_dev.git.ssh.__main__:main"
 git-use-ssh  = "py_dev.git.remote_use_ssh.__main__:main"
