--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,12 +4,12 @@ requires-python = ">=3.8.0"
 version         = "0.1.78"
 
 dependencies = [
-  "std2@https://github.com/ms-jpq/std2/archive/963cf22346620926c0bd64f628ff4d8141123db5.tar.gz",
+  "std2@https://github.com/ms-jpq/std2/archive/d3bd326c7f268a4538efd95f4a1ae1ac8299cb6a.tar.gz",
   "Pygments",
   "Jinja2",
 ]
 [project.optional-dependencies]
-dev = ["mypy"]
+dev = ["mypy", "isort", "black"]
 
 
 [project.scripts]
